@@ -3,11 +3,11 @@ $data
 </%args>
 %   my $value = $data->value();
 %   if (defined ($value) and ($value eq 'available')) {
-        <button class="btn-only-icon btn-download" onclick=downloadReport()>
-            <% __('Download System Status report') %>
+        <button class="btn-only-icon btn-download" onclick=downloadUsersCSV()>
+            <% __('Download domain users csv') %>
         </button>
         <script>
-        function downloadReport() {
+        function downloadUsersCSV() {
             window.location.href='/Samba/ExportUsers?action=download';
         }
         </script>
